--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,6 @@ buildscript {
     dependencies {
         def nav_version = "2.5.0"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
@@ -25,4 +24,5 @@ task clean(type: Delete) {
 ext{
     nav_version = "2.5.0"
     retrofit_version = "2.9.0"
+    loggingInterceptorVersion = "4.9.3"
 }
