--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Androiddesafioitau"
+        android:theme="@style/Theme.Itau"
         tools:targetApi="31">
         <activity
             android:name=".app.view.BaseActivity"
