--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:theme="@style/Theme.Itau"
         tools:targetApi="31">
         <activity
-            android:name=".app.view.SplashActivity"
+            android:name=".app.view.activitys.SplashActivity"
             android:theme="@style/Theme.Splash"
             android:exported="true">
             <intent-filter>
@@ -27,7 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".app.view.BaseActivity"/>
+        <activity android:name=".app.view.activitys.BaseActivity"/>
     </application>
 
 </manifest>
