--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,11 +48,23 @@ dependencies {
     // Coroutines
      implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1")
 
+
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    //Test
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    testImplementation "org.mockito:mockito-core:$mockitoVersion"
+    testImplementation "org.mockito:mockito-inline:$mockitoVersion"
+    testImplementation "androidx.arch.core:core-testing:$archCoreTestingVersion"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$courotinesTestVersion"
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.0"
+    androidTestImplementation "com.schibsted.spain:barista:$baristaVersion"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:$espressoVersion"
+
 }
